--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ body {
   overflow: hidden;
   box-shadow: 0px 3px 8px rgba(200, 200, 200, 0.5);
   padding: 2px;
+  cursor: pointer;
   background-color: #fafafa; }
 @media screen and (min-width: 769px) {
   #header-section {
@@ -260,7 +261,8 @@ body {
 
 #main-section {
   width: 100%;
-  padding: 10px; }
+  padding: 10px;
+  padding-right: 17px; }
 @media screen and (min-width: 769px) {
   #main-section {
     height: calc(100% - 120px); } }
@@ -335,12 +337,6 @@ body {
     padding: 15px;
     text-align: center;
     white-space: pre-line; }
-  .regex-section span {
-    border: dotted 1px white;
-    position: absolute;
-    margin: 10px;
-    top: 0px;
-    left: 0px; }
   .regex-section code {
     font-family: 'PT Mono', monospace;
     border-radius: 4px;
@@ -373,19 +369,20 @@ body {
     width: 100%;
     border-radius: 0; } }
 
-  .regex-input textarea {
+  .regex-input p {
     font-family: 'Dosis', sans-serif;
     background-color: rgba(255, 255, 255, 0);
     display: block;
     resize: none;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     padding: 10px;
+    margin: 0;
     color: white;
     overflow: hidden;
     border: none 0px transparent;
     transition: background-color .1s ease-in-out; }
-    .regex-input textarea:focus {
+    .regex-input p:focus {
       color: #0c8da0;
       background-color: rgba(255, 255, 255, 0.9); }
 
@@ -394,6 +391,7 @@ body {
   clear: both; }
 
 .regex-tips {
+  margin: 0;
   width: 100%;
   height: 100px;
   padding: 6px 18px;
@@ -402,6 +400,7 @@ body {
   font-size: 16px; }
 
 .regex-keywords {
+  margin: 0;
   width: 100%;
   height: 100px;
   padding: 6px; }
@@ -429,6 +428,41 @@ body {
   font-family: 'PT Mono', monospace;
   font-size: 14px;
   color: #438d99; }
+  .regex-console kbd {
+    display: block;
+    border: none 0px transparent;
+    border-bottom: solid 1px #aaaaaa;
+    font-size: 14px;
+    box-shadow: none;
+    color: #828282;
+    margin: 5px auto;
+    border-radius: 0px;
+    width: 98%;
+    padding: 0px 16px;
+    background: transparent;
+    background-image: url("../media/triangle.svg");
+    background-repeat: no-repeat;
+    background-position-y: 4px; }
+    .regex-console kbd.fail {
+      color: #ef5350; }
+    .regex-console kbd.ok {
+      color: #66bb6a; }
+
+.msgNull {
+  color: grey; }
+
+.msgUndefined {
+  color: grey;
+  font-style: italic; }
+
+.msgString {
+  color: red; }
+
+.msgNumber {
+  color: blue; }
+
+.msgArray {
+  color: black; }
 
 .regex-item footer {
   background-color: whitesmoke;
@@ -444,7 +478,7 @@ body {
   cursor: pointer;
   font-size: 22px;
   color: #c8c8c8;
-  transition: color .15s ease-in-out; }
+  transition: color .2s ease-in-out; }
   [class^=regex-button]:hover {
     display: inline-block;
     cursor: pointer;
@@ -509,3 +543,9 @@ body {
     box-shadow: 0px 0px 1px 0px #0c8da0 inset; }
   #load-more:active {
     letter-spacing: 3px; }
+
+.mCS-my-theme.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+  background-color: red; }
+
+.mCS-my-theme.mCSB_scrollTools .mCSB_draggerRail {
+  background-color: white; }
