--- a/css/main.css
+++ b/css/main.css
@@ -226,12 +226,12 @@ body {
     left: auto;
     right: 5%;
     border-radius: 0 8px 8px 0;
-    border: none 0px transparent;
+    border: solid 1px #4badb8;
     transition: font-size .1s ease-in-out, color .1s .2s ease-in-out, box-shadow .1s ease-in-out, background .1s ease-in-out; }
     #nav-search button:hover {
       background-color: white;
       color: #4badb8;
-      box-shadow: 0px 0px 1px 0px #0c8da0 inset; }
+      box-shadow: 0px 0px 0px 0px #0c8da0 inset; }
     #nav-search button:active {
       font-size: 26px; }
   #nav-search input {
@@ -298,7 +298,8 @@ body {
   border-radius: 18px;
   margin: 0px;
   padding: 0px;
-  z-index: 1; }
+  z-index: 1;
+  cursor: pointer; }
   .regex-header h3 {
     position: absolute;
     margin: auto;
@@ -369,22 +370,23 @@ body {
     width: 100%;
     border-radius: 0; } }
 
-  .regex-input p {
-    font-family: 'Dosis', sans-serif;
-    background-color: rgba(255, 255, 255, 0);
-    display: block;
-    resize: none;
-    width: 100%;
-    min-height: 100px;
-    padding: 10px;
-    margin: 0;
-    color: white;
-    overflow: hidden;
-    border: none 0px transparent;
-    transition: background-color .1s ease-in-out; }
-    .regex-input p:focus {
-      color: #0c8da0;
-      background-color: rgba(255, 255, 255, 0.9); }
+.test-text {
+  font-family: 'Dosis', sans-serif;
+  background-color: rgba(255, 255, 255, 0);
+  display: block;
+  letter-spacing: 3px;
+  width: 100%;
+  min-height: 100px;
+  padding: 10px;
+  margin: 0;
+  color: white;
+  overflow: hidden;
+  border: none 0px transparent;
+  transition: background-color .1s ease-in-out;
+  white-space: pre-wrap; }
+  .test-text:focus {
+    color: #0c8da0;
+    background-color: rgba(255, 255, 255, 0.9); }
 
 .regex-toggle-panel {
   box-shadow: 0px 30px 30px -20px #e6e6e6 inset, 0px -30px 30px -20px #e6e6e6 inset;
@@ -393,7 +395,7 @@ body {
 .regex-tips {
   margin: 0;
   width: 100%;
-  height: 100px;
+  height: 150px;
   padding: 6px 18px;
   color: #438d99;
   font-family: 'Dosis', sans-serif;
@@ -402,7 +404,7 @@ body {
 .regex-keywords {
   margin: 0;
   width: 100%;
-  height: 100px;
+  height: 150px;
   padding: 6px; }
   .regex-keywords span {
     font-family: 'Open Sans', sans-serif;
@@ -421,9 +423,19 @@ body {
     .regex-keywords span:active {
       box-shadow: 1px 1px 4px 1px #c8c8c8; }
 
+.reg-hlight {
+  display: inline;
+  height: 22px;
+  vertical-align: bottom;
+  border-radius: 2px;
+  padding: 0px 4px;
+  margin: 0 2px;
+  color: #4badb8;
+  background-color: white; }
+
 .regex-console {
   width: 100%;
-  height: 100px;
+  height: 150px;
   padding: 6px 18px;
   font-family: 'PT Mono', monospace;
   font-size: 14px;
@@ -517,7 +529,6 @@ body {
   background-size: 10%; }
 
 #load-more {
-  border: none 0px transparent;
   margin: auto;
   left: 0;
   right: 0;
@@ -535,17 +546,12 @@ body {
   font-size: 18px;
   font-family: 'Raleway', sans-serif;
   background-color: #4badb8;
+  border: solid 1px #4badb8;
   box-shadow: 0px -25px 30px -16px #0c8da0 inset, 0px 0px 16px 2px #0c8da0 inset;
   transition: letter-spacing .1s ease-in-out, color .1s .2s ease-in-out, box-shadow .1s ease-in-out, background .1s ease-in-out; }
   #load-more:hover {
     background-color: white;
     color: #4badb8;
-    box-shadow: 0px 0px 1px 0px #0c8da0 inset; }
+    box-shadow: 0px 0px 0px 0px #0c8da0 inset; }
   #load-more:active {
     letter-spacing: 3px; }
-
-.mCS-my-theme.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: red; }
-
-.mCS-my-theme.mCSB_scrollTools .mCSB_draggerRail {
-  background-color: white; }
