--- a/css/main.css
+++ b/css/main.css
@@ -338,18 +338,21 @@ body {
     padding: 15px;
     text-align: center;
     white-space: pre-line; }
-  .regex-section code {
-    font-family: 'PT Mono', monospace;
-    border-radius: 4px;
-    background-color: #fafafa;
-    color: #438d99;
-    line-height: 2em;
-    font-size: 15px;
-    padding: 4px 8px; }
-    .regex-section code:focus {
-      box-shadow: 0px 0px 10px #c8c8c8 inset;
-      background-color: #ffffff;
-      color: #787878; }
+
+.regex-code {
+  display: inline;
+  text-indent: 0px;
+  font-family: 'PT Mono', monospace;
+  border-radius: 4px;
+  background-color: #fafafa;
+  color: #438d99;
+  line-height: 26px;
+  font-size: 15px;
+  padding: 2px 8px; }
+  .regex-code:focus {
+    box-shadow: 0px 0px 10px #c8c8c8 inset;
+    background-color: #ffffff;
+    color: #787878; }
 
 .regex-input {
   border-radius: 0 10px 0 0;
