--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100vh !important;
   background-color: #438d99;
   background: linear-gradient(to bottom, #1e6b84, #aae9d1); }
 
@@ -21,6 +21,7 @@ body {
   margin: auto;
   left: 0;
   right: 0;
+  position: absolute;
   min-height: 560px;
   min-width: 320px;
   background-color: #ffffff;
@@ -30,7 +31,7 @@ body {
 @media screen and (max-width: 768px) {
   #main-ui {
     width: 98vw;
-    height: 99vh;
+    height: 98vh;
     margin-top: 1vh; } }
 
 @media screen and (min-width: 769px) {
@@ -51,7 +52,6 @@ body {
   overflow: hidden;
   box-shadow: 0px 3px 8px rgba(200, 200, 200, 0.5);
   padding: 2px;
-  cursor: pointer;
   background-color: #fafafa; }
 @media screen and (min-width: 769px) {
   #header-section {
@@ -80,7 +80,8 @@ body {
     font-family: 'Raleway', sans-serif;
     color: white;
     display: inline-block;
-    text-align: center; }
+    text-align: center;
+    cursor: pointer; }
 @media screen and (min-width: 769px) {
   #header-section header {
     padding: 18px 0; } }
@@ -278,6 +279,9 @@ body {
 @media screen and (max-width: 480px) {
   #main-section {
     height: calc(100% - 80px); } }
+
+#inner-section {
+  padding-bottom: 30vh; }
 
 .regex-item {
   border-radius: 10px;
